optimize Method ToList,and add ZipHelper.cs, which is compression string.

--- a/FreshCommonUtilityNet/FreshCommonUtilityNet.csproj
+++ b/FreshCommonUtilityNet/FreshCommonUtilityNet.csproj
@@ -152,6 +152,7 @@
     <Compile Include="Web\FilterHTMLHelper.cs" />
     <Compile Include="Web\WebHttpHelper.cs" />
     <Compile Include="Web\WebRequestHelper.cs" />
+    <Compile Include="Zip\ZipHelper.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
