--- a/FreshCommonUtilityNetTest/FreshCommonUtilityNetTest.csproj
+++ b/FreshCommonUtilityNetTest/FreshCommonUtilityNetTest.csproj
@@ -86,6 +86,7 @@
   <ItemGroup>
     <Compile Include="Assert.cs" />
     <Compile Include="DtoClasses.cs" />
+    <Compile Include="EmitLearn.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SimpleCrudTest.cs" />
