--- a/FreshCommonUtilityNet/FreshCommonUtilityNet.csproj
+++ b/FreshCommonUtilityNet/FreshCommonUtilityNet.csproj
@@ -134,6 +134,7 @@
     <Compile Include="Dapper\TableAttribute.cs" />
     <Compile Include="Dapper\TypeExtension.cs" />
     <Compile Include="DataConvert\DataTypeConvertHelper.cs" />
+    <Compile Include="DeepCopy\DeepCopyHelper.cs" />
     <Compile Include="Dynamic\DynamicDataEntity.cs" />
     <Compile Include="Enum\EnumHelper.cs" />
     <Compile Include="Image\ImageHelper.cs" />
