--- a/FreshCommonUtilityNetTest/FreshCommonUtilityNetTest.csproj
+++ b/FreshCommonUtilityNetTest/FreshCommonUtilityNetTest.csproj
@@ -67,6 +67,7 @@
     </Reference>
     <Reference Include="System.DirectoryServices" />
     <Reference Include="System.Numerics" />
+    <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Threading.Tasks.Extensions, Version=4.1.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Threading.Tasks.Extensions.4.3.0\lib\portable-net45+win8+wp8+wpa81\System.Threading.Tasks.Extensions.dll</HintPath>
       <Private>True</Private>
@@ -81,16 +82,37 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assert.cs" />
-    <Compile Include="DtoClasses.cs" />
+    <Compile Include="Dapper\DapperMySqlTest.cs" />
+    <Compile Include="Dapper\DapperSqliteTest.cs" />
+    <Compile Include="Dapper\DapperSqlServerTest.cs" />
+    <Compile Include="Dapper\DtoClasses.cs" />
+    <Compile Include="DataConvert\DataTypeConvertHelperTests.cs" />
+    <Compile Include="DeepCopy\DeepCopyHelperTests.cs" />
     <Compile Include="EmitLearn.cs" />
+    <Compile Include="Enumber\EnumberHelperTests.cs" />
+    <Compile Include="Enum\AuthEnum.cs" />
+    <Compile Include="Enum\EnumSex.cs" />
+    <Compile Include="Enum\OrderType.cs" />
+    <Compile Include="Enum\PersonTimeState.cs" />
+    <Compile Include="Enum\PersonTimeType.cs" />
+    <Compile Include="ExcelHelper\ExcelHelperTests.cs" />
+    <Compile Include="Model\PersonGattScheduleInfoDto.cs" />
+    <Compile Include="Model\TestsTabelToListObject.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SimpleCrudTest.cs" />
-    <Compile Include="TestClass.cs" />
+    <Compile Include="Dapper\SimpleCrudTest.cs" />
+    <Compile Include="Security\Security.cs" />
+    <Compile Include="Zip\ZipHelperTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+    <None Include="TestUseFile\BasicTestData.xls" />
+    <None Include="TestUseFile\BasicTestData.xlsx" />
+    <None Include="TestUseFile\DataTableToExcel.xlsx" />
+    <None Include="TestUseFile\ExcelToDataTable.XLS" />
+    <None Include="TestUseFile\TestExport.xlsx" />
+    <None Include="TestUseFile\TestExportLessData.xlsx" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\FreshCommonUtilityNet\FreshCommonUtilityNet.csproj">
