--- a/FreshCommonUtilityNetTest/App.config
+++ b/FreshCommonUtilityNetTest/App.config
@@ -4,6 +4,12 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
+  <appSettings>
+    <add key="FromName" value="***"/>
+    <add key="FromEmailAddress" value="1222222@163.com"/>
+    <add key="EmailSmtpServerAddress" value="smtp.163.com"/>
+    <add key="FromEmailPassword" value="授权码或者密码"/>
+  </appSettings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
   </startup>
