Delete unuse namespace.

--- a/FreshCommonUtilityNetTest/FreshCommonUtilityNetTest.csproj
+++ b/FreshCommonUtilityNetTest/FreshCommonUtilityNetTest.csproj
@@ -107,7 +107,9 @@
     <Compile Include="Zip\ZipHelperTests.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <None Include="App.config">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="packages.config" />
     <None Include="TestUseFile\BasicTestData.xls" />
     <None Include="TestUseFile\BasicTestData.xlsx" />
