Repair get difference of two same type entity.Deal Enum error in DataTable to entity list.

--- a/FreshCommonUtilityNetTest/FreshCommonUtilityNetTest.csproj
+++ b/FreshCommonUtilityNetTest/FreshCommonUtilityNetTest.csproj
@@ -99,6 +99,7 @@
     <Compile Include="Enum\PersonTimeType.cs" />
     <Compile Include="ExcelHelper\ExcelHelperTests.cs" />
     <Compile Include="ExpandMath\BigIntTest.cs" />
+    <Compile Include="ExpressionLear.cs" />
     <Compile Include="Model\PersonGattScheduleInfoDto.cs" />
     <Compile Include="Model\TestsTabelToListObject.cs" />
     <Compile Include="Program.cs" />
