--- a/FreshCommonUtilityNet/FreshCommonUtilityNet.csproj
+++ b/FreshCommonUtilityNet/FreshCommonUtilityNet.csproj
@@ -123,6 +123,7 @@
     <Compile Include="Cache\RedisConnectionHelper.cs" />
     <Compile Include="CommonModel\ReferencedForeighKeyModel.cs" />
     <Compile Include="CommonModel\ReferencedModel.cs" />
+    <Compile Include="CommonModel\SqliteMasterModel.cs" />
     <Compile Include="Configure\AppConfigurationHelper.cs" />
     <Compile Include="Cookie\CookieHelper.cs" />
     <Compile Include="Dapper\ColumnAttribute.cs" />
@@ -140,6 +141,7 @@
     <Compile Include="Dapper\RequiredAttribute.cs" />
     <Compile Include="Dapper\SimpleCRUD.cs" />
     <Compile Include="Dapper\SimpleCRUDAsync.cs" />
+    <Compile Include="Dapper\SqlitePart.cs" />
     <Compile Include="Dapper\SQLServerPart.cs" />
     <Compile Include="Dapper\TableAttribute.cs" />
     <Compile Include="Dapper\TypeExtension.cs" />
