--- a/FreshCommonUtilityNet/FreshCommonUtilityNet.csproj
+++ b/FreshCommonUtilityNet/FreshCommonUtilityNet.csproj
@@ -80,6 +80,9 @@
       <HintPath>..\packages\NPOI.2.2.1\lib\net40\NPOI.OpenXmlFormats.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Oracle.ManagedDataAccess, Version=4.122.18.3, Culture=neutral, PublicKeyToken=89b483f429c47342, processorArchitecture=MSIL">
+      <HintPath>..\packages\Oracle.ManagedDataAccess.18.3.0\lib\net40\Oracle.ManagedDataAccess.dll</HintPath>
+    </Reference>
     <Reference Include="StackExchange.Redis, Version=1.1.608.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\StackExchange.Redis.1.1.608\lib\net45\StackExchange.Redis.dll</HintPath>
       <Private>True</Private>
@@ -137,6 +140,7 @@
     <Compile Include="Dapper\KeyAttribute.cs" />
     <Compile Include="Dapper\MySqlPart.cs" />
     <Compile Include="Dapper\NotMappedAttribute.cs" />
+    <Compile Include="Dapper\OraclePart.cs" />
     <Compile Include="Dapper\ReadOnlyAttribute.cs" />
     <Compile Include="Dapper\RequiredAttribute.cs" />
     <Compile Include="Dapper\SimpleCRUD.cs" />
