--- a/FreshCommonUtilityNet/packages.config
+++ b/FreshCommonUtilityNet/packages.config
@@ -5,6 +5,7 @@
   <package id="MySql.Data" version="6.9.9" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net45" />
   <package id="NPOI" version="2.2.1" targetFramework="net45" />
+  <package id="Oracle.ManagedDataAccess" version="18.3.0" targetFramework="net45" />
   <package id="SharpZipLib" version="0.86.0" targetFramework="net45" />
   <package id="StackExchange.Redis" version="1.1.608" targetFramework="net45" />
   <package id="System.Data.SQLite" version="1.0.105.2" targetFramework="net45" />
