--- a/FreshCommonUtilityNetTest/packages.config
+++ b/FreshCommonUtilityNetTest/packages.config
@@ -3,6 +3,7 @@
   <package id="Dapper" version="1.42" targetFramework="net45" />
   <package id="EntityFramework" version="6.0.0" targetFramework="net45" />
   <package id="MySql.Data" version="6.9.9" targetFramework="net45" />
+  <package id="Oracle.ManagedDataAccess" version="18.3.0" targetFramework="net45" />
   <package id="System.Data.SQLite" version="1.0.105.2" targetFramework="net45" />
   <package id="System.Data.SQLite.Core" version="1.0.105.2" targetFramework="net45" />
   <package id="System.Data.SQLite.EF6" version="1.0.105.2" targetFramework="net45" />
