--- a/FreshCommonUtilityNet/FreshCommonUtilityNet.csproj
+++ b/FreshCommonUtilityNet/FreshCommonUtilityNet.csproj
@@ -18,7 +18,7 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
-    <Optimize>true</Optimize>
+    <Optimize>false</Optimize>
     <OutputPath>bin\Debug\</OutputPath>
     <DefineConstants>
     </DefineConstants>
@@ -156,6 +156,7 @@
     <Compile Include="Email\EmailHelper.cs" />
     <Compile Include="Enum\EnumHelper.cs" />
     <Compile Include="Image\ImageHelper.cs" />
+    <Compile Include="Log\LogUtil.cs" />
     <Compile Include="Map\FastMapHelper.cs" />
     <Compile Include="ExpandMath\BigInt.cs" />
     <Compile Include="Npoi\NpoiHelper.cs" />
